<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_edit"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linDetails"
        android:layout_width="411dp"
        android:layout_height="119dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linRV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/lblStoreName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:drawableLeft="@drawable/ic_baseline_store"
                android:drawablePadding="5dp"
                android:text="STORE: "
                android:textSize="20sp"
                app:fontFamily="sans-serif-black" />

            <TextView
                android:id="@+id/txtStoreName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="null"

                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:fontFamily="monospace" />

        </LinearLayout>

    </LinearLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/linRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linDetails"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="356dp"
                android:layout_height="586dp"
                android:orientation="vertical">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/lblTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:drawableLeft="@drawable/ic_total_white"
                    android:text="Total: Php "
                    android:textColor="#ffffff"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tvTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="#ffffff"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/btnSubmitOrder"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/round_corner_plain"
                    android:text="Submit Order"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:backgroundTint="#00FFFFFF"
                    app:backgroundTintMode="src_over"
                    app:icon="@drawable/ic_baseline_arrow_forward_24"
                    app:iconGravity="textEnd" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linRV"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/choice1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:background="@drawable/custom_dialog_background"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                app:backgroundTint="#00FFFFFF"
                app:backgroundTintMode="src_over" />

            <Button
                android:id="@+id/choice2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:background="@drawable/custom_dialog_background"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                app:backgroundTint="#00FFFFFF"
                app:backgroundTintMode="src_over" />

            <Button
                android:id="@+id/choice3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:background="@drawable/custom_dialog_background"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                app:backgroundTint="#00FFFFFF"
                app:backgroundTintMode="src_over" />

        </LinearLayout>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
