...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.377"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

            <Button
                android:id="@+id/btnCustomerSignup"
                android:layout_width="286dp"
                android:layout_height="48dp"
                android:layout_margin="7dp"
                android:layout_marginStart="59dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="22dp"
                android:background="@drawable/new_btn_main"
                android:text="Signup as Customer"
                app:backgroundTint="#00FFFFFF"
                android:textColor="#ffffff"
                app:backgroundTintMode="screen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:text="Verify Password"
                android:textColor="#002f66"
                app:autoSizeTextType="uniform"
                app:fontFamily="sans-serif-black"
                app:layout_constraintBottom_toTopOf="@+id/etVerifyPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <EditText
...
