<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_margin="3dp"
    android:background="@drawable/round_corner_plain"
    android:backgroundTint="#ffffff">


    <AutoCompleteTextView
        android:id="@+id/etOrder"
        android:layout_margin="5dp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:hint="Example, 10 suka"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/tvComputedPrice"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginEnd="10dp"
        android:hint="0" />

    <ImageView
        android:id="@+id/ivRemove"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_remove" />

</LinearLayout>
